--- a/smart-dream-journal/package.json
+++ b/smart-dream-journal/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.6",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
