--- a/smart-dream-journal/package.json
+++ b/smart-dream-journal/package.json
@@ -6,16 +6,20 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "canvasjs": "^1.8.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-input-emoji": "^4.3.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.4.3",
     "styled-components": "^5.3.6",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
